--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ div.header-logo {
     float: left;
     width: 25%;
     height: auto;
-    padding: 5px 10px;
+    padding: 5px 10px 5px 20px;
 }
 
 /*.block-news {
@@ -82,7 +82,7 @@ div.header-logo {
     float: left;
     width: 75%;
     height: auto;
-    padding: 5px 10px;
+    padding: 5px 50px 5px 20px;
 }
 
 article div.img-left{
